feat: 建立 AI 個人化內容資訊流 MVP 框架
• 更新專案概述 README.md
• 新增 Google Firebase 登入主頁
• 新增 A/B 測試與事件追蹤系統
• 完整使用者流程: 登入 → 興趣 → Feed → 互動
• 建立品質評分與速率限制機制
• 更新 .gitignore 保護敏感檔案

Claude Code 標記: AI 生成內容平台 MVP 基礎架構

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,37 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Firebase logs and debug files
+*-debug.log
+firestore-debug.log
+firebase-debug.log
+
+# Testing and development files
+/test-*.js
+/scripts/*.test.js
+
+# Local development caches
+.firebase/
+
+# IDE-specific files
+.vscode/
+.idea/
+
+# OS-specific files
+Thumbs.db
+.DS_Store
+*.swp
+*.swo
+
+# AI-generated test files (generated during development)
+/business-concept.md
+/mvp-plan.md
+/risk-analysis.md
+/tech-stack.md
+/test-full-flow.js
+
+# Temporary/transient files
+*.tmp
+*.temp
+*.bak
